feat: add manual applicant invitation links
